# poppie

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum
.github/workflows/: ci.yml  deploy.yml  pages.yml  release-please.yml
cmd/poppie/: client.go  delete.go  get.go  list.go  main.go  root.go  server.go  store.go
docs/: _config.yml  architecture.md  bug-patterns.md  index.md  integration-dm.md  integration.md  runbook.md
docs/adr/: 000-template.md  001-no-subagents.md  002-go-grpc.md  003-bdd-cucumber.md  004-local-encrypted-storage.md  005-sdk-version-negotiation.md  index.md
docs/sdk/: go.md  index.md  python.md  versioning.md
features/: delete_secret.feature  get_code.feature  list_secrets.feature  store_secret.feature
features/steps/: steps_test.go
internal/server/: interceptor.go  interceptor_test.go  server.go  server_test.go  version.go
internal/store/: store.go  store_test.go
internal/totp/: totp.go  totp_test.go
proto/poppie/: poppie.pb.go  poppie.proto  poppie_grpc.pb.go
sdk/go/: client.go  client_test.go  go.mod  go.sum  options.go  version.go  warnings.go
sdk/python/: pyproject.toml
sdk/python/src/poppie/: __init__.py  _client.py  _version.py  _warnings.py
sdk/python/src/poppie/_generated/poppie/: poppie_pb2.py  poppie_pb2_grpc.py
sdk/python/tests/: test_client.py
tests/: README.md
